--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -55,7 +55,7 @@
 		</div>
 
 		<!-- slider #1 -->
-		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Civil Engineering'" ng-if="projects_commercial.length">
+		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Commercial'" ng-if="projects_commercial.length">
 
 			<div layout-padding class="projects-listing" ng-repeat="item in projects_commercial" flex="100" flex-sm="100" flex-gt-sm="50">
 				<md-card class="md-whiteframe-6dp" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0; position: relative;">
@@ -84,7 +84,7 @@
 		<!-- slider #1 -->
 
 		<!-- slider #2 -->
-		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Landscape Architecture'" ng-if="projects_education.length">
+		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Education'" ng-if="projects_education.length">
 			
 			<div layout-padding class="projects-listing" ng-repeat="item in projects_education" flex="100" flex-sm="100" flex-gt-sm="50">
 				<md-card class="md-whiteframe-6dp" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0; position: relative;">
@@ -113,7 +113,7 @@
 		<!-- slider #2 -->
 
 		<!-- slider #3 -->
-		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Planning'" ng-if="projects_energy.length">
+		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Energy'" ng-if="projects_energy.length">
 
 			<div layout-padding class="projects-listing" ng-repeat="item in projects_energy" flex="100" flex-sm="100" flex-gt-sm="50">
 				<md-card class="md-whiteframe-6dp" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0; position: relative;">
@@ -142,7 +142,7 @@
 		<!-- slider #3 -->
 
 		<!-- slider #4 -->
-		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Surveying'" ng-if="projects_entertainment.length">
+		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Entertainment'" ng-if="projects_entertainment.length">
 
 			<div layout-padding class="projects-listing" ng-repeat="item in projects_entertainment" flex="100" flex-sm="100" flex-gt-sm="50">
 				<md-card class="md-whiteframe-6dp" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0; position: relative;">
@@ -171,7 +171,7 @@
 		<!-- slider #4 -->
 
 		<!-- slider #5 -->
-		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'GIS'" ng-if="projects_government.length">
+		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Government'" ng-if="projects_government.length">
 
 			<div layout-padding class="projects-listing" ng-repeat="item in projects_government" flex="100" flex-sm="100" flex-gt-sm="50">
 				<md-card class="md-whiteframe-6dp" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0; position: relative;">
@@ -200,7 +200,7 @@
 		<!-- slider #5 -->
 
 		<!-- slider #6 -->
-		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Aerial Mapping'" ng-if="projects_healthcare.length">
+		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Healthcare'" ng-if="projects_healthcare.length">
 
 			<div layout-padding class="projects-listing" ng-repeat="item in projects_healthcare" flex="100" flex-sm="100" flex-gt-sm="50">
 				<md-card class="md-whiteframe-6dp" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0; position: relative;">
@@ -229,7 +229,7 @@
 		<!-- slider #6 -->
 
 		<!-- slider #6 -->
-		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Aerial Mapping'" ng-if="projects_multi_family_residential.length">
+		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Multi-Family Residential'" ng-if="projects_multi_family_residential.length">
 
 			<div layout-padding class="projects-listing" ng-repeat="item in projects_multi_family_residential" flex="100" flex-sm="100" flex-gt-sm="50">
 				<md-card class="md-whiteframe-6dp" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0; position: relative;">
@@ -258,7 +258,7 @@
 		<!-- slider #6 -->
 
 		<!-- slider #6 -->
-		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Aerial Mapping'" ng-if="projects_single_family_residential.length">
+		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Single Family Residential'" ng-if="projects_single_family_residential.length">
 
 			<div layout-padding class="projects-listing" ng-repeat="item in projects_single_family_residential" flex="100" flex-sm="100" flex-gt-sm="50">
 				<md-card class="md-whiteframe-6dp" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0; position: relative;">
