--- a/lib/client/app/application/partials/navigation-menu.html
+++ b/lib/client/app/application/partials/navigation-menu.html
@@ -114,7 +114,7 @@
                     <md-grid-tile ng-repeat="tile in projectslist | limitTo: 6" md-rowspan="3" md-rowspan-xs="2" md-rowspan-sm="2" md-colspan="3" md-colspan-sm="2" md-colspan-xs="2" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
                     <a href="{{tile.settings.url}}">
                         <img ng-src="{{tile.data.page.foreground.images.source}}" style="width: auto; max-width:300%; min-height: 100%;">
-                        <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3>{{tile.settings.name}}<md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.settings.name}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
+                        <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.settings.name}}<md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.settings.name}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
                     </a>
                     </md-grid-tile>
                 </md-grid-list>
