--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -51,7 +51,7 @@
 		</div>
 
 		<div class="listing" flex="100" layout="row" layout-align="center center" layout-wrap style="position: relative;" ng-show="select_project_type == 'Select a project type'">
-			<span flex><h1 ng-attr-style="color: {{base_hue_darkest.value}};">Select A Project Category Above To View Projects</h1></span>
+			<span flex style="text-align: center;"><h1 ng-attr-style="color: {{base_hue_darkest.value}};">Select A Project Category Above To View Projects</h1></span>
 		</div>
 
 		<!-- slider #1 -->
