added drone to services

--- a/lib/client/app/application/landing/partials/section_1.html
+++ b/lib/client/app/application/landing/partials/section_1.html
@@ -9,6 +9,7 @@
 					<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
 						<div flex layout="column" layout-align="center center">
 							<md-card style="background: #fafafa; height: 100%; text-align: center;" class="service">
+								<a href="/spotlight/civil-engineering">
 								<md-card-header>
 									<md-card-header-text>
 										<md-icon style="width: 64px; height: 64px;" md-svg-src="media/005-compass.svg">
@@ -17,6 +18,7 @@
 										<span class="md-title">CIVIL ENGINEERING</span>
 									</md-card-header-text>
 								</md-card-header>
+								</a>
 							</md-card>
 						</div>
 					</div>
@@ -27,6 +29,7 @@
 					<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
 						<div flex layout="column" layout-align="center center">
 							<md-card style="background: #fafafa; height: 100%; text-align: center;" class="service">
+								<a href="/spotlight/landscape-architecture">
 								<md-card-header>
 									<md-card-header-text>
 										<md-icon style="width: 64px; height: 64px;" md-svg-src="media/003-plant.svg">
@@ -35,6 +38,7 @@
 										<span class="md-title">LANDSCAPE ARCHITECTURE</span>
 									</md-card-header-text>
 								</md-card-header>
+								</a>
 							</md-card>
 						</div>
 					</div>
@@ -44,6 +48,7 @@
 					<div layout-wrap layout="row" layout-align="center center">
 						<div flex layout="column" layout-align="center center">
 							<md-card style="background: #fafafa; height: 100%; text-align: center;" class="service">
+								<a href="/spotlight/planning">
 								<md-card-header>
 									<md-card-header-text>
 										<md-icon style="width: 64px; height: 64px;" md-svg-src="media/004-whiteboard.svg">
@@ -52,6 +57,7 @@
 										<span class="md-title">PLANNING</span>
 									</md-card-header-text>
 								</md-card-header>
+								</a>
 							</md-card>
 						</div>
 					</div>
@@ -61,6 +67,7 @@
 					<div layout-wrap layout="row" layout-align="center center">
 						<div flex layout="column" layout-align="center center">
 							<md-card style="background: #fafafa; height: 100%; text-align: center;" class="service">
+								<a href="/spotlight/survey">
 								<md-card-header>
 									<md-card-header-text>
 										<md-icon style="width: 64px; height: 64px;" md-svg-src="media/002-tripod.svg">
@@ -69,6 +76,7 @@
 										<span class="md-title">SURVEYING</span>
 									</md-card-header-text>
 								</md-card-header>
+								</a>
 							</md-card>
 						</div>
 					</div>
@@ -78,6 +86,7 @@
 					<div layout-wrap layout="row" layout-align="center center">
 						<div flex layout="column" layout-align="center center">
 							<md-card style="background: #fafafa; height: 100%; text-align: center;" class="service">
+								<a href="/spotlight/gis">
 								<md-card-header>
 									<md-card-header-text>
 										<md-icon style="width: 64px; height: 64px;" md-svg-src="media/001-travel.svg">
@@ -86,10 +95,31 @@
 										<span class="md-title">GIS</span>
 									</md-card-header-text>
 								</md-card-header>
+								</a>
 							</md-card>
 						</div>
 					</div>
 				</div>
+
+				<div layout-padding flex="100" flex-sm="50" flex-gt-sm="33" class="services container">
+					<div layout-wrap layout="row" layout-align="center center">
+						<div flex layout="column" layout-align="center center">
+							<md-card style="background: #fafafa; height: 100%; text-align: center;" class="service">
+								<a href="/spotlight/aerial-mapping">
+								<md-card-header>
+									<md-card-header-text>
+										<md-icon style="width: 64px; height: 64px;" md-svg-src="media/drone.svg">
+										</md-icon>
+										<br><br>
+										<span class="md-title">Aerial Mapping</span>
+									</md-card-header-text>
+								</md-card-header>
+								</a>
+							</md-card>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 	</md-card>
