--- a/lib/client/app/application/landing/partials/section_1.html
+++ b/lib/client/app/application/landing/partials/section_1.html
@@ -1,7 +1,14 @@
+<style>
+	
+md-card.section-1-ms-explorer {min-height: 600px;}
+.icon-container.section-1-ms-explorer {width: {{window_width}}px; margin-top: 500px;}
+
+</style>
+
 <div layout="column" layout-gt-sm="row" layout-align="center center" style="padding-top: 64px; padding-bottom: 64px; position: relative;">
-	<md-card layout="column" layout-align="center center" ng-attr-style="background: {{base_hue_lightest.value}}; width: 80%; z-index: 2; overflow: hidden; position: relative; min-height: 600px;">
+	<md-card layout="column" layout-align="center center" ng-attr-style="background: {{base_hue_lightest.value}}; width: 80%; z-index: 2; overflow: hidden; position: relative;" ng-class="{'section-1-ms-explorer': browser == 'msie' || browser == 'trident'}">
 		<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">OUR CORE SERVICES</h1>
-		<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
+		<div class="icon-container" flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2;" ng-class="{'section-1-ms-explorer': browser == 'msie' || browser == 'trident'}">
 			<div layout-wrap layout="row" layout-align="start center">
 				
 
