--- a/lib/client/app/application/landing/partials/section_1.html
+++ b/lib/client/app/application/landing/partials/section_1.html
@@ -1,7 +1,8 @@
 <style>
 	
 md-card.section-1-ms-explorer {min-height: 600px;}
-.icon-container.section-1-ms-explorer {width: {{window_width}}px; margin-top: 500px;}
+.icon-container.section-1-ms-explorer {width: {{window_width}}px; margin-top: 250px;}
+.inner-icon-container.section-1-ms-explorer {width: 100%;}
 
 </style>
 
@@ -9,7 +10,7 @@ md-card.section-1-ms-explorer {min-height: 600px;}
 	<md-card layout="column" layout-align="center center" ng-attr-style="background: {{base_hue_lightest.value}}; width: 80%; z-index: 2; overflow: hidden; position: relative;" ng-class="{'section-1-ms-explorer': browser == 'ie'}">
 		<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">OUR CORE SERVICES</h1>
 		<div class="icon-container" flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2;" ng-class="{'section-1-ms-explorer': browser == 'ie'}">
-			<div layout-wrap layout="row" layout-align="start center">
+			<div class="inner-icon-container" layout-wrap layout="row" layout-align="start center" ng-class="{'section-1-ms-explorer': browser == 'ie'}">
 				
 
 				<div layout-padding flex="100" flex-sm="50" flex-gt-sm="33" class="services container">
