--- a/lib/client/app/application/partials/navigation-menu.html
+++ b/lib/client/app/application/partials/navigation-menu.html
@@ -1,10 +1,10 @@
 <!-- Menu Panel -->
-<div layout="row" layout-align="start start" class="navigation panel md-whiteframe-4dp" ng-class="{'open': navigation_panel, 'close': !navigation_panel}" style="background-color: {{base_hue_darkest.value}};">
+<div layout="row" layout-align="start start" class="navigation panel md-whiteframe-4dp" ng-class="{'open': navigation_panel, 'close': !navigation_panel}" ng-attr-style="background-color: {{base_hue_darkest.value}};">
     <!-- <img src="https://storage.googleapis.com/spsd-189118.appspot.com/navigation-background.jpg" style="position: absolute; top: 0; left: 0; min-height: 100%; min-width: 100%; opacity: .1; z-index: 1;"> -->
     <div layout="row" layout-align="start start" style="position: relative;" flex="100" layout-wrap>
         <div flex="50"></div>
         <div flex="50">
-        <md-icon ng-click="close_parent_menu()" style="color: {{base_hue_lightest.value}}; position: absolute; top: 16px; right: 32px; z-index: 5; cursor: pointer;">close</md-icon>
+        <md-icon ng-click="close_parent_menu()" ng-attr-style="color: {{base_hue_lightest.value}}; position: absolute; top: 8px; right: 32px; z-index: 5; cursor: pointer;">close</md-icon>
         </div>
         <md-list flex="100" style="padding-bottom: 48px;">
             <a href="/" style="text-decoration: none;">
@@ -33,21 +33,21 @@
 <!-- Menu Panel -->
 
 <!-- Menu Panel - Mobile Only -->
-<div layout="row" layout-align="start start" class="sub-navigation navigation panel md-whiteframe-4dp" ng-class="{'open': sub_navigation_panel, 'close': !sub_navigation_panel}" style="background-color: {{base_hue_darkest.value}};">
+<div layout="row" layout-align="start start" class="sub-navigation navigation panel md-whiteframe-4dp" ng-class="{'open': sub_navigation_panel, 'close': !sub_navigation_panel}" ng-attr-style="background-color: {{base_hue_darkest.value}};">
     <div layout="row" layout-align="start start" style="position: relative;" flex="100" layout-wrap>
         <div flex="50"></div>
         <div flex="50">
-        <md-icon ng-click="close_menu()" style="color: {{base_hue_lightest.value}}; position: absolute; top: 16px; right: 32px; z-index: 5; cursor: pointer;">close</md-icon>
+        <md-icon ng-click="close_menu()" ng-attr-style="color: {{base_hue_lightest.value}}; position: absolute; top: 8px; right: 32px; z-index: 5; cursor: pointer;">close</md-icon>
         </div>
         <div flex="100" layout="row" layout-align="start center" layout-margin>
-            <h2 style="color: {{base_hue_lightest.value}};" layout-padding>
+            <h2 ng-attr-style="color: {{base_hue_lightest.value}};" layout-padding>
                 {{menu_title}}
             </h2>
         </div>
         <md-list flex="100">
             <a href="{{child.url}}" ng-repeat="child in child_items" class="navigation link mobile" style="cursor: pointer;">
-                <md-list-item ng-click="close_menu()" class="navigation item" flex="100" layout-padding>
-                    <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Internal Link {{child.name}}" md-font-library="material-icons">link</md-icon>
+                <md-list-item ng-click="close_menu(); close_parent_menu()" class="navigation item" flex="100" layout-padding>
+                    <md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Internal Link {{child.name}}" md-font-library="material-icons">link</md-icon>
                     <p>{{child.name}}</p>
                 </md-list-item>
             </a>
@@ -59,48 +59,48 @@
                 <md-tab label="Contact Info">
                     <md-content class="md-padding">
                         <md-list-item class="md-2-line">
-                            <md-icon style="color: {{base_hue_lightest.value}};">phone</md-icon>
+                            <md-icon ng-attr-style="color: {{base_hue_lightest.value}};">phone</md-icon>
                             <div class="md-list-item-text md-offset">
-                                <h3 style="color: {{base_hue_lightest.value}};">{{settings.data.phone_1}}</h3>
-                                <p style="color: {{base_hue_lightest.value}};">Office</p>
+                                <h3 ng-attr-style="color: {{base_hue_lightest.value}};">{{settings.data.phone_1}}</h3>
+                                <p ng-attr-style="color: {{base_hue_lightest.value}};">Office</p>
                             </div>
                         </md-list-item>
                         <md-divider></md-divider>
                         <md-list-item class="md-2-line">
-                            <md-icon style="color: {{base_hue_lightest.value}};">pin_drop</md-icon>
+                            <md-icon ng-attr-style="color: {{base_hue_lightest.value}};">pin_drop</md-icon>
                             <div class="md-list-item-text md-offset">
-                                <h3 style="color: {{base_hue_lightest.value}};">{{settings.data.address.street}}<br>{{settings.data.address.city}}, {{settings.data.address.state}} {{settings.data.address.zipcode}}</h3>
+                                <h3 ng-attr-style="color: {{base_hue_lightest.value}};">{{settings.data.address.street}}<br>{{settings.data.address.city}}, {{settings.data.address.state}} {{settings.data.address.zipcode}}</h3>
                             </div>
                         </md-list-item>
                     </md-content>
                 </md-tab>
                 <md-tab label="Hours">
                     <md-content class="md-padding">
-                        <md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}};">
+                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
                         Sunday <p class="md-secondary">Closed</p>
                         </md-list-item>
                         <md-divider></md-divider>
-                        <md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}};">
+                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
                         Monday <p class="md-secondary">7:30AM - 5:00PM</p>
                         </md-list-item>
                         <md-divider></md-divider>
-                        <md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}};">
+                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
                         Tuesday <p class="md-secondary">7:30AM - 5:00PM</p>
                         </md-list-item>
                         <md-divider></md-divider>
-                        <md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}};">
+                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
                         Wednesday <p class="md-secondary">7:30AM - 5:00PM</p>
                         </md-list-item>
                         <md-divider></md-divider>
-                        <md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}};">
+                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
                         Thursday <p class="md-secondary">7:30AM - 5:00PM</p>
                         </md-list-item>
                         <md-divider></md-divider>
-                        <md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}};">
+                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
                         Friday <p class="md-secondary">7:30AM - 5:00PM</p>
                         </md-list-item>
                         <md-divider></md-divider>
-                        <md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}};">
+                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
                         Saturday <p class="md-secondary">7:30AM - 5:00PM</p>
                         </md-list-item>
                         <md-divider></md-divider>
@@ -114,7 +114,7 @@
                     <md-grid-tile ng-repeat="tile in projectslist | limitTo: 6" md-rowspan="3" md-rowspan-xs="2" md-rowspan-sm="2" md-colspan="3" md-colspan-sm="2" md-colspan-xs="2" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
                     <a href="{{tile.settings.url}}">
                         <img ng-src="{{tile.data.page.foreground.images.source}}" style="width: auto; max-width:300%; min-height: 100%;">
-                        <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.settings.name}}<md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.settings.name}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
+                        <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.settings.name}}<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.settings.name}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
                     </a>
                     </md-grid-tile>
                 </md-grid-list>
