--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -1,13 +1,14 @@
 <style>
 	md-menu-item {min-height: 48px;}
 	.border-left {border-left: 1px solid #e0e0e0;}
+    .header-ms-explorer {position: fixed; width: 100%;}
 </style>
 
 <md-content class="page" style="height: {{window_height}}px">
 	<section ng-cloak>
 
 		<!-- header -->
-		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 5; border-bottom: 1px solid #e0e0e0">
+		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 5; border-bottom: 1px solid #e0e0e0" ng-class="{'header-ms-explorer': browser == 'ie'}">
 			<div ng-include src="'application/partials/header.html'"></div>
 		</md-subheader>
 		<!-- header -->
