--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -4,12 +4,13 @@
     background-size: cover; width: 100%!important; height: 100%; 
     right: 0; top: 200px; padding:0; margin: 0!important;
 }
+	.header-ms-explorer {position: fixed; width: 100%;}
 </style>
 <md-content class="page spotlight" style="height: {{window_height}}px">
 	<section style="background: {{base_hue_lighter.value}}">
 
 		<!-- header -->
-		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 5; border-bottom: 1px solid #e0e0e0">
+		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 5; border-bottom: 1px solid #e0e0e0" ng-class="{'header-ms-explorer': browser == 'ie'}">
 			<div ng-include src="'application/partials/header.html'"></div>
 		</md-subheader>
 		<!-- header -->
