--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -80,25 +80,25 @@
 	                        <md-icon md-menu-origin ng-attr-style="color: {{base_hue_lightest.value}}">settings</md-icon>
 	                    </md-button>
 	                    <md-menu-content width="4">
-	                        <md-menu-item ng-show="user.security.roles == 'management'">
+	                        <md-menu-item ng-show="me.security.roles == 'management'">
 	                            <md-button ng-click="open_edit_configuration()">
 	                                <md-icon>settings</md-icon>
 	                                App Settings
 	                            </md-button>
 	                        </md-menu-item>
-	                        <md-menu-item ng-show="user.security.roles == 'management'">
+	                        <md-menu-item ng-show="me.security.roles == 'management'">
 	                            <md-button ng-click="openUserVault()">
 	                                <md-icon>recent_actors</md-icon>
 	                                User Vault
 	                            </md-button>
 	                        </md-menu-item>
-	                        <md-menu-item ng-show="user.security.roles == 'management'">
+	                        <md-menu-item ng-show="me.security.roles == 'management'">
 	                            <md-button ng-click="openMediaVault(null)">
 	                                <md-icon>photo_library</md-icon>
 	                                Media Vault
 	                            </md-button>
 	                        </md-menu-item>
-	                        <md-menu-item ng-show="user.security.roles == 'management'">
+	                        <md-menu-item ng-show="me.security.roles == 'management'">
 	                            <md-button ng-click="null">
 	                                <md-icon>assignment</md-icon>
 	                                Task Runner
