--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -6,6 +6,7 @@
 		}
 		.slideshow_slide_video {display: block; margin: 0 auto; width: auto; height: auto; min-width: 150%; min-height: 150%;}
 	}
+    .type-text-ms-explorer {top: 50%; left: 30%; width: 40%;}
 </style>
 <!-- Hero Slideshow -->
 <div class="lightweight-hero--slideshow component slideshow" hero-element style="position: relative;" layout="row">
@@ -15,7 +16,7 @@
   			<source src="https://storage.googleapis.com/mma-texas.appspot.com/media/video/mma-hero.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
-        <div style="z-index: 1; position: absolute;" flex="90" layout="row">
+        <div style="z-index: 1; position: absolute;" class="container" flex="90" layout="row" ng-class="{'type-text-ms-explorer': browser == 'ie'}">
         	<div style="position: relative; max-width: 100%; height: 120px; background-color: rgba(0,0,0,.72);" layout="row" layout-align="center center" flex="100">
 	            <div layout="row" layout-margin layout-align="start center">
 	                <div layout="column" layout-align="center start">
