adding task runner

--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -99,7 +99,7 @@
 	                            </md-button>
 	                        </md-menu-item>
 	                        <md-menu-item ng-show="me.security.roles == 'management'">
-	                            <md-button ng-click="null">
+	                            <md-button ng-click="openTaskRunner()">
 	                                <md-icon>assignment</md-icon>
 	                                Task Runner
 	                            </md-button>
