--- a/lib/client/app/stylesheets/lightweight.css
+++ b/lib/client/app/stylesheets/lightweight.css
@@ -3,9 +3,10 @@
 /* ============================== Curtain ============================== */
 .dialog-curtain {z-index: 21;}
 .secondary-dialog-curtain {z-index: 22;}
+.tertiary-dialog-curtain {z-index: 23;}
 @media screen and (max-width: 839px) {
 .suite-dialog {position: relative!important; width: 100%; margin:0!important;}
-.dialog-curtain, .secondary-dialog-curtain {overflow-y: scroll!important;}
+.dialog-curtain, .secondary-dialog-curtain, .tertiary-dialog-curtain {overflow-y: scroll!important;}
 .suite-dialog > md-card-title {min-height: 150px;}
 .mediaVault .suite-dialog > md-card-title {max-height: 64px; min-height: 64px;}
 .userVault .suite-dialog > md-card-title {max-height: 64px; min-height: 64px;}
@@ -13,7 +14,7 @@
 .suite-dialog > md-card-title {max-height: 100px;}
 .userVault .suite-dialog > md-card-title, .mediaVault .suite-dialog > md-card-title, .blogVault .suite-dialog > md-card-title {max-height: 64px;}
 .dialog-curtain,
-.suite-dialog, .secondary-dialog-curtain {position: fixed; top: 0; left: 0; right: 0; bottom: 0; overflow: hidden; margin:0!important;}
+.suite-dialog, .secondary-dialog-curtain, .tertiary-dialog-curtain {position: fixed; top: 0; left: 0; right: 0; bottom: 0; overflow: hidden; margin:0!important;}
 /* ============================== Curtain ============================== */
 
 /* ============================== dialogs ============================== */
