--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -24,7 +24,7 @@
 		<h1 class="type heading" ng-attr-style="color: {{base_hue_lightest.value}}; line-height: 64px; margin: 0; font-weight: bold;">mma NEWS</h1>
 	</div>
 	<div flex="100" layout-align="center center" layout-align-sm="start start" layout-align-gt-sm="start start" layout="row" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding>
-		<div ng-repeat="blog in bloglist | limitTo:6" flex="100" flex-sm="50" flex-gt-sm="33" layout-wrap>
+		<div ng-repeat="blog in bloglist | limitTo:6 | orderBy : '-blog.data.date'" flex="100" flex-sm="50" flex-gt-sm="33" layout-wrap>
 			<md-card flex="100" class="md-whiteframe-6dp" style="background: {{base_hue_lightest.value}}; position: relative; z-index: 2">
 				<md-card-title style="padding-bottom: 0;">
 					<md-card-title-text style="width: 100%">
