--- a/lib/client/app/application/pages/posts/partials/blog-list-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-list-template.html
@@ -58,7 +58,7 @@
 	            </md-card>
 			</div>
 			<div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="50" layout-align="start start">
-				<md-card class="md-whiteframe-8dp" ng-repeat="blog in bloglist" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="100" layout-align="start start" ng-attr-style="z-index: 3; background-color: {{base_hue_lightest.value}}; cursor: pointer; margin-bottom: 0;" layout-padding>
+				<md-card class="md-whiteframe-8dp" ng-repeat="blog in bloglist | orderBy : 'blog.data.date'" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="100" layout-align="start start" ng-attr-style="z-index: 3; background-color: {{base_hue_lightest.value}}; cursor: pointer; margin-bottom: 0;" layout-padding>
 					<md-list class="md-dense" flex>
 						<a ng-href="{{blog.settings.url}}">
 	                    <md-list-item class="md-3-line" flex>
