--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -19,13 +19,22 @@
 						<p ng-attr-style="font-weight: bold; color: {{base_hue_lightest.value}};">Services</p>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Civil Engineering</p></a>
+						<a href="/spotlight/gis"><p ng-attr-style="color: {{base_hue_lightest.value}};">GIS</p></a>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Surveying</p></a>
+						<a href="/spotlight/survey"><p ng-attr-style="color: {{base_hue_lightest.value}};">Surveying</p></a>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Landscape Architecture</p></a>
+						<a href="/spotlight/aerial-mapping"><p ng-attr-style="color: {{base_hue_lightest.value}};">Aerial Mapping</p></a>
+					</md-list-item>
+					<md-list-item>
+						<a href="/spotlight/planning"><p ng-attr-style="color: {{base_hue_lightest.value}};">Planning</p></a>
+					</md-list-item>
+					<md-list-item>
+						<a href="/spotlight/civil-engineering"><p ng-attr-style="color: {{base_hue_lightest.value}};">Civil Engineering</p></a>
+					</md-list-item>
+					<md-list-item>
+						<a href="/spotlight/landscape-architecture"><p ng-attr-style="color: {{base_hue_lightest.value}};">Landscape Architecture</p></a>
 					</md-list-item>
 				</md-list>
 			</div>
@@ -35,13 +44,13 @@
 						<p ng-attr-style="font-weight: bold; color: {{base_hue_lightest.value}};">Quick Links</p>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">About Us</p></a>
+						<a href="/info/about-us"><p ng-attr-style="color: {{base_hue_lightest.value}};">About Us</p></a>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Careers</p></a>
+						<a href="/info/join-team-mma"><p ng-attr-style="color: {{base_hue_lightest.value}};">Careers</p></a>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Projects</p></a>
+						<a href="/projects"><p ng-attr-style="color: {{base_hue_lightest.value}};">Projects</p></a>
 					</md-list-item>
 				</md-list>
 			</div>
@@ -71,7 +80,7 @@
 					<p ng-attr-style="color: {{base_hue_lightest.value}};">{{settings.data.company_name}} &#169; {{year}}</p>
 				</div>
 				<div flex="50" flex-sm="25" flex-gt-sm="25">
-					<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Privacy &amp; Terms</p></a>
+					<a href="/info/privacy-policy"><p ng-attr-style="color: {{base_hue_lightest.value}};">Privacy &amp; Terms</p></a>
 				</div>
 				<div flex="100" flex-sm="50" flex-gt-sm="50">
 					<h1 class="type heading footer" ng-attr-style="display: inline-block; color: {{base_hue_lightest.value}};">Superpowered By Lightweight</h1>
