--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -63,7 +63,7 @@
                                 </div>
                             </md-input-container>
                         </md-list-item>
-                        <input type="hidden" ng-model="index_page_contact_form.source" ng-value="Home Page">
+                        <input type="hidden" ng-model="index_page_contact_form.source" ng-value="'Home Page'">
                     </md-card-content>
                     <md-card-actions layout="row" layout-align="end center" flex>
                         <md-button class="md-raised" ng-click="sendLead(index_page_contact_form)" ng-attr-style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">Send</md-button>
