--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -95,9 +95,8 @@
 	                                </div>
 	                            </md-input-container>
 	                        </md-list-item>
-	                        <input type="hidden" ng-model="project_page_contact_form.source" ng-value="'{{projectPage.data.title}} Page'">
 	                    </md-card-content>
-	                    <md-button ng-click="sendLead(project_page_contact_form)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -36px; right: 8px;">
+	                    <md-button ng-click="sendLead(project_page_contact_form, projectPage.data.title)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -36px; right: 8px;">
 					        <md-icon style="color: {{base_hue_lighter.value}};">send</md-icon>
 					    </md-button>
 	                </form>
