--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -13,7 +13,7 @@
 			</div>
 		</div>
 		<div layout="column" layout-sm="row" layout-gt-sm="row" flex="100" flex-gt-sm="66" layout-align="center start" layout-align-sm="center center" layout-align-gt-sm="center center" layout-wrap>
-			<div layout-padding flex="100" flex-sm="33" flex-gt-sm="33">
+			<div layout-padding flex="100" flex-sm="25" flex-gt-sm="25">
 				<md-list>
 					<md-list-item>
 						<p ng-attr-style="font-weight: bold; color: {{base_hue_lightest.value}};">Services</p>
@@ -27,6 +27,13 @@
 					<md-list-item>
 						<a href="/spotlight/aerial-mapping"><p ng-attr-style="color: {{base_hue_lightest.value}};">Aerial Mapping</p></a>
 					</md-list-item>
+				</md-list>
+			</div>
+			<div layout-padding flex="100" flex-sm="25" flex-gt-sm="25">
+				<md-list>
+					<md-list-item>
+						<p ng-attr-style="font-weight: bold; color: {{base_hue_lightest.value}};">Services</p>
+					</md-list-item>
 					<md-list-item>
 						<a href="/spotlight/planning"><p ng-attr-style="color: {{base_hue_lightest.value}};">Planning</p></a>
 					</md-list-item>
@@ -38,7 +45,7 @@
 					</md-list-item>
 				</md-list>
 			</div>
-			<div layout-padding flex="100" flex-sm="33" flex-gt-sm="33">
+			<div layout-padding flex="100" flex-sm="25" flex-gt-sm="25">
 				<md-list>
 					<md-list-item>
 						<p ng-attr-style="font-weight: bold; color: {{base_hue_lightest.value}};">Quick Links</p>
@@ -54,7 +61,7 @@
 					</md-list-item>
 				</md-list>
 			</div>
-			<div layout-padding flex="100" flex-sm="33" flex-gt-sm="33">
+			<div layout-padding flex="100" flex-sm="25" flex-gt-sm="25">
 				<md-list>
 					<md-list-item>
 						<p ng-attr-style="font-weight: bold; color: {{base_hue_lightest.value}};">Stay Connected</p>
