--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -109,7 +109,7 @@
 	                            </md-input-container>
 	                        </md-list-item>
 	                    </md-card-content>
-	                    <md-button ng-click="sendLead(spotlight_page_contact_form, spotlightPage.data.title); clearTaskModel(spotlight)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -36px; right: 8px;">
+	                    <md-button ng-click="sendLead(spotlight_page_contact_form, spotlightPage.data.title); clearForm(spotlight)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -36px; right: 8px;">
 					        <md-icon style="color: {{base_hue_lighter.value}};">send</md-icon>
 					    </md-button>
 	                </form>
